--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -1,8 +1,17 @@
 :root {
   --white: #fff;
   --placeholder-text: #cfcfcf;
-  --tittle: #06382a;
-  --background-task: #399a3a;
+  --primary-color: #2b2d42;
+  --secondary-color: #8d99ae;
+
+  /* --primary-color: #222e50;
+  --secondary-color: #007991; */
+  
+  /* --primary-color: #06382a;
+  --secondary-color: #399a3a; */
+
+
+
   --box-shadow: 0px 0px 8px rgba(69, 69, 69, 0.3);
   --border-radius: 4px;
 }
