--- a/src/components/TodoWrapper/TodoWrapper.module.css
+++ b/src/components/TodoWrapper/TodoWrapper.module.css
@@ -5,12 +5,20 @@
 
 .tittle {
   font-size: 100px;
-  font-family: 'Bebas Neue', sans-serif;
-  padding-top: 20px;
-  letter-spacing: 4px;
-  color: var(--tittle);
+  /* font-family: 'Bebas Neue', sans-serif; */
+  letter-spacing: 20px;
+  color: var(--white);
 }
 
 .content {
-  background-color: var(--tittle);
+  background-color: var(--primary-color);
+  height: 600px;
+}
+
+.wrapper{
+  background-color: var(--primary-color);
+  width: 640px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
