--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,12 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Prompt:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@0;1&display=swap');
 
 /*
 Tittles.
 
-font-family: 'Bebas Neue', sans-serif; */
+font-family: 'Bebas Neue', sans-serif;
 
-/*
+font-family: 'Pangolin', cursive;
+
+
 Content.
 
-font-family: 'Prompt', sans-serif; */
+font-family: 'Prompt', sans-serif;
+
+font-family: 'Roboto Condensed', sans-serif;
+*/
