--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,13 +1,18 @@
-body{
-  background-image: linear-gradient(to bottom right, var(--primary-color), var(--secondary-color));
+body {
+  background-image: linear-gradient(
+    to bottom right,
+    var(--primary-color),
+    var(--secondary-color)
+  );
   min-height: 100vh;
   /* display: grid;
   place-content: center; */
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: 'Pangolin', cursive;
 }
 
-input{
+input {
   box-sizing: border-box;
 }
